bin_PROGRAMS = sdr-core
sdr_core_SOURCES = 	sdr-main.c sdrexport.c
sdr_core_LDADD = libDttSP.a

noinst_LIBRARIES = libDttSP.a
libDttSP_a_SOURCES = \
	am_demod.c\
	am_demod.h \
	banal.c\
	banal.h\
	bufvec.c\
	bufvec.h\
	correctIQ.c\
	correctIQ.h\
	cwtones.c\
	cwtones.h\
	cxops.c\
	cxops.h\
	dcblock.c\
	dcblock.h\
	dttspagc.c\
	dttspagc.h\
	fastrig.c\
	fastrig.h\
	filter.c\
	filter.h\
	fm_demod.c\
	fm_demod.h\
	graphiceq.c\
	graphiceq.h\
	halfband.c\
	halfband.h\
	hilbert.c\
	hilbert.h\
	isoband.c\
	isoband.h\
	lmadf.c\
	lmadf.h\
	meter.c\
	meter.h\
	noiseblanker.c\
	noiseblanker.h\
	oscillator.c\
	oscillator.h\
	ovsv.c\
	ovsv.h\
	resample.c\
	resample.h\
	ringb.c\
	ringb.h\
	sdr.c\
	sdrexport.h\
	spectrum.c\
	spectrum.h\
	speechproc.c\
	speechproc.h\
	splitfields.c\
	splitfields.h\
	spottone.c\
	spottone.h\
	thunk.c\
	thunk.h\
	window.c\
	window.h\
	waveshape.c\
	waveshape.h\
	wscompand.c\
	wscompand.h\
	update.c \
	update.h\
	common.h\
	complex.h\
	datatypes.h\
	defs.h\
	fromsys.h\
	keyer.h\
	local.h
